# Product-Marketing-Assistant

./: .gitignore  README.md  pyproject.toml
ecommerce_marketing_assistant/: azure_computer_vision.py  config_example.ini  main.py  prompt.py
